Closed
Bug 226049
Opened 22 years ago
Closed 22 years ago
DRefTool analysis for nntp files
Categories
(MailNews Core :: Networking: NNTP, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
6.85 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNNTPProtocol.cpp&rev=1.350&mark=841#836
Deref-error: "cacheListener"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNNTPProtocol.cpp&rev=1.350&mark=900#895
Deref-error: "cacheListener"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNewsDownloader.cpp&rev=1.28&mark=597#592
Deref-error: "m_downloaderForGroup"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNntpIncomingServer.cpp&rev=1.141&mark=846#841
Deref-error: "mHostInfoStream"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNntpIncomingServer.cpp&rev=1.141&mark=847#842
Deref-error: "mHostInfoStream"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNntpIncomingServer.cpp&rev=1.141&mark=848#843
Deref-error: "mHostInfoStream"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNntpIncomingServer.cpp&rev=1.141&mark=849#844
Deref-error: "mHostInfoStream"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNntpIncomingServer.cpp&rev=1.141&mark=850#845
Deref-error: "mHostInfoStream"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNntpIncomingServer.cpp&rev=1.141&mark=851#846
Deref-error: "mHostInfoStream"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNntpIncomingServer.cpp&rev=1.141&mark=852#847
Deref-error: "mHostInfoStream"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNntpIncomingServer.cpp&rev=1.141&mark=853#848
Deref-error: "mHostInfoStream"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNntpIncomingServer.cpp&rev=1.141&mark=854#849
Deref-error: "mHostInfoStream"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNntpIncomingServer.cpp&rev=1.141&mark=855#850
Deref-error: "mHostInfoStream"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/mailnews/news/src/nsNntpIncomingServer.cpp&rev=1.141&mark=861#856
Deref-error: "mHostInfoStream"
Attachment #135783 -
Flags: superreview?(roc)
Attachment #135783 -
Flags: review?(roc)
Attachment #135783 -
Flags: superreview?(roc)
Attachment #135783 -
Flags: superreview+
Attachment #135783 -
Flags: review?(roc)
Attachment #135783 -
Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: MailNews → Core
Updated•16 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•