Bug 226049 DRefTool analysis for nntp files r=roc sr=roc